syntax = "proto3";

//#options
option java_multiple_files = true;
option java_package = "com.mesosphere.usi.service";
option java_outer_classname = "HelloWorldProto";

package helloworld;
//#options

//#services
////////////////////////////////////// The greeting service definition.
service GreeterService {
    //////////////////////
    // Sends a greeting //
    ////////*****/////////
    //      HELLO       //
    ////////*****/////////
    rpc SayHello (HelloRequest) returns (HelloReply) {}

    // Comment spanning
    // on several lines
    rpc ItKeepsTalking (stream HelloRequest) returns (HelloReply) {}

    /*
     * C style comments
     */
    rpc ItKeepsReplying (HelloRequest) returns (stream HelloReply) {}

    /* C style comments
     * on several lines
     * with non-empty heading/trailing line */
    rpc StreamHellos (stream HelloRequest) returns (stream HelloReply) {}

    rpc setup(stream LaunchPod) returns (stream PodStateEvent) {}
}
//#services

//#messages
// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

message RunTemplate {
    string shellCommand = 1;
    string role = 2;
}

message LaunchPod {
    string podId = 1;
    RunTemplate runSpec = 2;
}

message PodStateEvent {
    string podId = 1;
}
//#messages